printed message to student

--- a/dna-solutions.ipynb
+++ b/dna-solutions.ipynb
@@ -94,14 +94,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "codons_to_amino has been sucessfully loaded in\n"
+      "[['Ala', 'GCT', 'GCC', 'GCA', 'GCG'],\n",
+      " ['Arg', 'CGT', 'CGC', 'CGA', 'CGG', 'AGA', 'AGG'],\n",
+      " ['Asn', 'AAT', 'AAC'],\n",
+      " ['Asp', 'GAT', 'GAC'],\n",
+      " ['Cys', 'TGT', 'TGC'],\n",
+      " ['Gln', 'CAA', 'CAG'],\n",
+      " ['Glu', 'GAA', 'GAG '],\n",
+      " ['Gly', 'GGT', 'GGC', 'GGA', 'GGG'],\n",
+      " ['His', 'CAT', 'CAC'],\n",
+      " ['Ile', 'ATT', 'ATC', 'ATA'],\n",
+      " ['START', 'ATG'],\n",
+      " ['Leu', 'TTA', 'TTG', 'CTT', 'CTC', 'CTA', 'CTG'],\n",
+      " ['Lys', 'AAA', 'AAG'],\n",
+      " ['Met', 'ATG'],\n",
+      " ['Phe', 'TTT', 'TTC'],\n",
+      " ['Pro', 'CCT', 'CCC', 'CCA', 'CCG'],\n",
+      " ['Ser', 'TCT TCC', 'TCA', 'TCG', 'AGT', 'AGC'],\n",
+      " ['Thr', 'ACT', 'ACC', 'ACA', 'ACG'],\n",
+      " ['Trp', 'TGG'],\n",
+      " ['Tyr', 'TAT', 'TAC'],\n",
+      " ['Val', 'GTT', 'GTC', 'GTA', 'GTG'],\n",
+      " ['STOP', 'TAA', 'TGA', 'TAG']]\n",
+      "{'Ala': ['GCT', 'GCC', 'GCA', 'GCG'],\n",
+      " 'Arg': ['CGT', 'CGC', 'CGA', 'CGG', 'AGA', 'AGG'],\n",
+      " 'Asn': ['AAT', 'AAC'],\n",
+      " 'Asp': ['GAT', 'GAC'],\n",
+      " 'Cys': ['TGT', 'TGC'],\n",
+      " 'Gln': ['CAA', 'CAG'],\n",
+      " 'Glu': ['GAA', 'GAG '],\n",
+      " 'Gly': ['GGT', 'GGC', 'GGA', 'GGG'],\n",
+      " 'His': ['CAT', 'CAC'],\n",
+      " 'Ile': ['ATT', 'ATC', 'ATA'],\n",
+      " 'Leu': ['TTA', 'TTG', 'CTT', 'CTC', 'CTA', 'CTG'],\n",
+      " 'Lys': ['AAA', 'AAG'],\n",
+      " 'Met': ['ATG'],\n",
+      " 'Phe': ['TTT', 'TTC'],\n",
+      " 'Pro': ['CCT', 'CCC', 'CCA', 'CCG'],\n",
+      " 'START': ['ATG'],\n",
+      " 'STOP': ['TAA', 'TGA', 'TAG'],\n",
+      " 'Ser': ['TCT TCC', 'TCA', 'TCG', 'AGT', 'AGC'],\n",
+      " 'Thr': ['ACT', 'ACC', 'ACA', 'ACG'],\n",
+      " 'Trp': ['TGG'],\n",
+      " 'Tyr': ['TAT', 'TAC'],\n",
+      " 'Val': ['GTT', 'GTC', 'GTA', 'GTG']}\n"
      ]
     }
    ],
