--- a/dna-solutions.ipynb
+++ b/dna-solutions.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
     "    matchingStrand = ''\n",
     "    for base in dnaIn:\n",
     "        if base == ' ':\n",
-    "            matchingStrand += ' '\n",
+    "            matchingStrand += ''\n",
     "            continue\n",
     "        matchingStrand += fourBases[base]\n",
     "    \n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -65,16 +65,16 @@
      "output_type": "stream",
      "text": [
       "A A T G C C T A T G G C\n",
-      "T T A C G G A T A C C G\n"
+      "TTACGGATACCG\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'T T A C G G A T A C C G'"
+       "'TTACGGATACCG'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,62 +89,21 @@
    "source": [
     "Now that you have your DNA replicator working, let's make use of it.\n",
     "\n",
-    "Below we have defined for you a dictionary called **codon_to_amino**. The keys of this dictionary are codons and the values are amino acids. It is your job to create a new function that uses your previous function to read an input half of a strand of DNA and prints to the screen all the codons the full piece would code for in a cell. "
+    "Below we have defined for you a dictionary called **aminos_to_codons**. The keys of this dictionary are codons and the values are a list amino acids. It is your job to create a new function that uses your previous function to read an input of half of a strand of DNA and prints to the screen all the codons the full piece would code for. \n",
+    "\n",
+    "Run the cell below to load in the dictionary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Ala', 'GCT', 'GCC', 'GCA', 'GCG'],\n",
-      " ['Arg', 'CGT', 'CGC', 'CGA', 'CGG', 'AGA', 'AGG'],\n",
-      " ['Asn', 'AAT', 'AAC'],\n",
-      " ['Asp', 'GAT', 'GAC'],\n",
-      " ['Cys', 'TGT', 'TGC'],\n",
-      " ['Gln', 'CAA', 'CAG'],\n",
-      " ['Glu', 'GAA', 'GAG '],\n",
-      " ['Gly', 'GGT', 'GGC', 'GGA', 'GGG'],\n",
-      " ['His', 'CAT', 'CAC'],\n",
-      " ['Ile', 'ATT', 'ATC', 'ATA'],\n",
-      " ['START', 'ATG'],\n",
-      " ['Leu', 'TTA', 'TTG', 'CTT', 'CTC', 'CTA', 'CTG'],\n",
-      " ['Lys', 'AAA', 'AAG'],\n",
-      " ['Met', 'ATG'],\n",
-      " ['Phe', 'TTT', 'TTC'],\n",
-      " ['Pro', 'CCT', 'CCC', 'CCA', 'CCG'],\n",
-      " ['Ser', 'TCT TCC', 'TCA', 'TCG', 'AGT', 'AGC'],\n",
-      " ['Thr', 'ACT', 'ACC', 'ACA', 'ACG'],\n",
-      " ['Trp', 'TGG'],\n",
-      " ['Tyr', 'TAT', 'TAC'],\n",
-      " ['Val', 'GTT', 'GTC', 'GTA', 'GTG'],\n",
-      " ['STOP', 'TAA', 'TGA', 'TAG']]\n",
-      "{'Ala': ['GCT', 'GCC', 'GCA', 'GCG'],\n",
-      " 'Arg': ['CGT', 'CGC', 'CGA', 'CGG', 'AGA', 'AGG'],\n",
-      " 'Asn': ['AAT', 'AAC'],\n",
-      " 'Asp': ['GAT', 'GAC'],\n",
-      " 'Cys': ['TGT', 'TGC'],\n",
-      " 'Gln': ['CAA', 'CAG'],\n",
-      " 'Glu': ['GAA', 'GAG '],\n",
-      " 'Gly': ['GGT', 'GGC', 'GGA', 'GGG'],\n",
-      " 'His': ['CAT', 'CAC'],\n",
-      " 'Ile': ['ATT', 'ATC', 'ATA'],\n",
-      " 'Leu': ['TTA', 'TTG', 'CTT', 'CTC', 'CTA', 'CTG'],\n",
-      " 'Lys': ['AAA', 'AAG'],\n",
-      " 'Met': ['ATG'],\n",
-      " 'Phe': ['TTT', 'TTC'],\n",
-      " 'Pro': ['CCT', 'CCC', 'CCA', 'CCG'],\n",
-      " 'START': ['ATG'],\n",
-      " 'STOP': ['TAA', 'TGA', 'TAG'],\n",
-      " 'Ser': ['TCT TCC', 'TCA', 'TCG', 'AGT', 'AGC'],\n",
-      " 'Thr': ['ACT', 'ACC', 'ACA', 'ACG'],\n",
-      " 'Trp': ['TGG'],\n",
-      " 'Tyr': ['TAT', 'TAC'],\n",
-      " 'Val': ['GTT', 'GTC', 'GTA', 'GTG']}\n"
+      "codons_to_amino properly loaded in\n"
      ]
     }
    ],
@@ -154,11 +113,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now that **codons_to_amino** is properly loaded in, write your code below."
+   ]
   }
  ],
  "metadata": {
