--- a/dna-solutions.ipynb
+++ b/dna-solutions.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A A T G C C T A T G G C\n",
+      "AATGCCTATGGC\n",
       "TTACGGATACCG\n"
      ]
     },
@@ -74,13 +74,13 @@
        "'TTACGGATACCG'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dnaReplicator('A A T G C C T A T G G C')"
+    "dnaReplicator('AATGCCTATGGC')"
    ]
   },
   {
@@ -96,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "codons_to_amino properly loaded in\n"
+      "aminos_to_codons properly loaded in\n"
      ]
     }
    ],
@@ -116,8 +116,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that **codons_to_amino** is properly loaded in, write your code below."
+    "Now that **aminios_to_codons** is properly loaded in, write your code below."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def aminoFinder(dnaIn):\n",
+    "    \n",
+    "    reference = dnaReplicator(dnaIn)\n",
+    "    \n",
+    "    aminoAcids = ''\n",
+    "    i = 0\n",
+    "    for i in range(0, len(reference), 3):\n",
+    "        codon = reference[i:i+3]\n",
+    "        aminoAcids += aminos_to_codon[codon] + ' '\n",
+    "    print(aminoAcids)\n",
+    "    return "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AATGCCTATGGC\n",
+      "TTACGGATACCG\n",
+      "Leu Arg Ile Pro \n"
+     ]
+    }
+   ],
+   "source": [
+    "aminoFinder('AATGCCTATGGC')\n",
+    "#answer is: Leu, Arg, Ile, Pro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
